[gd_scene load_steps=12 format=3 uid="uid://o7fhu8dyhedt"]

[ext_resource type="Script" uid="uid://bmotvsj8qig8o" path="res://scripts/rat.gd" id="1_0g0h3"]
[ext_resource type="Texture2D" uid="uid://cy5wycouphdmc" path="res://assets/down_rat0.png" id="1_po2hf"]
[ext_resource type="Texture2D" uid="uid://b6u0dk0s21pa1" path="res://assets/down_rat1.png" id="2_0g0h3"]
[ext_resource type="Texture2D" uid="uid://d16x02lwppgfx" path="res://assets/left_rat0.png" id="3_1ux2h"]
[ext_resource type="Texture2D" uid="uid://dqknn5ojxp4f0" path="res://assets/left_rat1.png" id="4_fdlk1"]
[ext_resource type="Texture2D" uid="uid://b7sb7y2bbc1tj" path="res://assets/right_rat0.png" id="5_7bnys"]
[ext_resource type="Texture2D" uid="uid://qlppc35p2dhb" path="res://assets/right_rat1.png" id="6_kc3ue"]
[ext_resource type="Texture2D" uid="uid://c8ogc6oakwnua" path="res://assets/up_rat0.png" id="7_ucpu4"]
[ext_resource type="Texture2D" uid="uid://cuxwm7653s6yp" path="res://assets/up_rat1.png" id="8_myae6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_u8fq5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_po2hf")
}, {
"duration": 1.0,
"texture": ExtResource("2_0g0h3")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_1ux2h")
}, {
"duration": 1.0,
"texture": ExtResource("4_fdlk1")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_7bnys")
}, {
"duration": 1.0,
"texture": ExtResource("6_kc3ue")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_ucpu4")
}, {
"duration": 1.0,
"texture": ExtResource("8_myae6")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0g0h3"]
radius = 249.0
height = 994.0

[node name="Rat" type="Node2D"]
script = ExtResource("1_0g0h3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_u8fq5")
animation = &"up"
autoplay = "up"

[node name="raycasts" type="Node2D" parent="."]

[node name="forward_cast" type="RayCast2D" parent="raycasts"]
position = Vector2(14, -524)
target_position = Vector2(-2, -296)
collide_with_areas = true

[node name="left_cast" type="RayCast2D" parent="raycasts"]
position = Vector2(-40, 9)
target_position = Vector2(-897, -5)

[node name="right_cast" type="RayCast2D" parent="raycasts"]
position = Vector2(69, -1)
target_position = Vector2(916, -1)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, -35)
shape = SubResource("CapsuleShape2D_0g0h3")
